Signed-off-by: PSI <nasda60@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- Site footer -->
         <footer class="footer">
-          <p>&copy; 2016 ψ(プサイ) / ちとせ</p>
+          <p>&copy; 2016 <a href="http://ledyba.org/">ψ(プサイ)</a> / ちとせ</p>
         </footer>
         <script>
           function post(name) {
