Signed-off-by: PSI <nasda60@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </footer>
         <script>
           function post(name) {
-            window.open("https://twitter.com/intent/tweet?text=" + encodeURIComponent(name+"で苦しいなう #四苦八苦なう"));
+            window.open("https://twitter.com/intent/tweet?text=" + encodeURIComponent(name+"で苦しいなう #四苦八苦なう http://ledyba.github.io/siku-hakku/"));
           }
           $("#btn-sei").on("click", function(){
             post("死");
