Signed-off-by: PSI <nasda60@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="jumbotron">
           <h1>四苦八苦なう</h1>
           <p class="lead">四苦八苦（しくはっく）とは、仏教における苦の分類です。あなたも四苦八苦で苦しんでいることを、とりあえずTwitterでいい感じにシェアしましょう。</p>
-          <p><a class="btn btn-lg btn-success" href="http://www.senjuji.or.jp/hitokuchi/103_110.php" role="button">Get started today</a></p>
+          <p><a class="btn btn-lg btn-success" href="http://www.senjuji.or.jp/hitokuchi/103_110.php" role="button">それぞれの苦しみのくわしい解説を見る</a></p>
         </div>
 
         <!-- Example row of columns -->
