Signed-off-by: PSI <nasda60@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>四苦八苦</title>
-        <meta name="description" content="">
+        <meta name="description" content="四苦八苦（しくはっく）とは、仏教における苦の分類です。あなたも四苦八苦で苦しんでいることを、とりあえずTwitterでいい感じにシェアしましょう。">
         <!-- Place favicon.ico in the root directory -->
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
