--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
       <div class="container">
-        <a class="github-fork-ribbon" href="https://github.com/ledyba/siku-hakku" title="Fork me on GitHub">Fork me on GitHub</a>
+        <a class="github-fork-ribbon" href="https://github.com/ledyba/awesome-siku-hakku" title="Fork me on GitHub">Fork me on GitHub</a>
 
         <!-- The justified navigation menu is meant for single line per list item.
              Multiple lines will require custom code not provided by Bootstrap. -->
