Signed-off-by: PSI <nasda60@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </footer>
         <script>
           function post(name,desc) {
-            window.open("https://twitter.com/intent/tweet?text=" + encodeURIComponent(name+"で苦しいなう ("+name+": "+desc+") #四苦八苦なう http://ledyba.github.io/siku-hakku/"));
+            window.open("https://twitter.com/intent/tweet?text=" + encodeURIComponent(name+"で苦しいなう ("+name+": "+desc+") #四苦八苦なう http://ledyba.github.io/awesome-siku-hakku/"));
           }
           $("#btn-sei").on("click", function(){
             post("生", "生まれること");
